--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-mongo_url = mongodb+srv://ashidreza:Ashid12345@mern.q6csm4v.mongodb.net/mern-portfolio
+mongo_url = mongodb+srv://{username}@mern.q6csm4v.mongodb.net/mern-portfolio
